--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <header id="main-header">
         <nav class="container">
             <div class="nav-left">
-                <img src="logo.png" alt="ZenDoc Logo" class="logo">
+                <img src="Z.png" alt="ZenDoc Logo" class="logo light-logo">
+                <img src="Zwhite.png" alt="ZenDoc Logo" class="logo dark-logo">
                 <a href="#" class="brand-name">ZenDoc</a>
                 <div class="nav-links" id="nav-links">
                     <a href="#">Download</a>
