--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                     </ul>
                 </div>
                 <div class="page-1-right">
-                    <div class="svg-placeholder">
-                        <p> [SVG Animation: ZenDoc handling documents, spreadsheets, presentations, audio, video, images in one place] </p>
-                        <span class="material-symbols-outlined placeholder-icon">devices</span>
+                    <div class="svg-container">
+                        <div class="svg-placeholder">
+                            <img src="Z.svg" alt="ZenDoc - A unified workspace for all your documents" class="feature-svg" loading="eager">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -163,7 +164,7 @@
                      <div class="card stats-card outline">
                          <div class="stat-main">
                             <span class="stat-value highlight-underline" data-target="85">0</span>%
-                            <p class="stat-desc text-title-large">Space saved</p>
+                            <p class="stat-desc text-title-large">Space Saved</p>
                         </div>
                         <div class="stat-details text-body-medium">
                              <p>30+ Versions Per doc</p>
@@ -174,7 +175,7 @@
                      <div class="card stats-card filled">
                          <div class="stat-main">
                             <span class="stat-value highlight-underline" data-target="60">0</span>%
-                            <p class="stat-desc text-title-large">Time saved</p>
+                            <p class="stat-desc text-title-large">Time Saved</p>
                         </div>
                         <div class="stat-details text-body-medium">
                              <p>+200% More details</p>
